# amplifier-module-provider-foundry-local

./: .gitignore  AMPLIFIER_CORE_COMPATIBILITY_ISSUE.md  README.md  pyproject.toml  test_provider_direct.py  test_provider_validation.py
ai_working/: DEBUG_MODES_IMPLEMENTATION.md  INTEGRATION_EXAMPLES.md  OPENAI_SDK_SYSTEM_PARAMETER_ERROR_FIX_SUMMARY.md  README.md  amplifier_foundry_workaround.py  test_direct_openai.py  test_runtime_warning.py
amplifier_module_provider_foundry_local/: __init__.py  _constants.py
examples/: basic_chat.py  integration_examples.py  orchestrator_compatibility.py
examples/profiles/: README.md  foundry-minimal.md  foundry-standalone.md  foundry-tools-focused.md
tests/: __init__.py  test_debug_modes_static.py  test_foundry_local_provider.py  test_integration.py  test_system_param_validation.py
